[project]
name = "regguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.76.0",
    "fastapi>=0.128.0",
    "grandalf>=0.8",
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langgraph>=1.0.7",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "uvicorn>=0.40.0",
    "xmltodict>=1.0.2",
]
